- Frame size selection for OPUS codec
- Max transmission interval increased to 500 msec
- Audio preprocessor for media file streaming
- Control media file offset before streaming to channel
- Test media file playback before streaming to channel
- Fixed bug where audio recording to single file contained audio from media files
- Fixed bug in .ogg file header for OPUS codec
iOS client
- Support for Dark Theme

Version 5.4.1, 2019/10/16
iOS client
- Updated Danish translation
Android client
- Fixed crash issue when uploading file

Version 5.4, 2019/06/25
Default Qt client
- Stream HTTP and HTTPS URLs instead of only files in Windows 10
- Sort bans in Banned Users dialog
- Sort user accounts in Users Accounts dialog
- OPUS audio codec v1.3
- Store audio in MP3 format on Windows
- Sound event for broadcast message
- BearWare.dk web-login for TeamTalk 5 Official servers
- Connect to encrypted TeamTalk servers (TeamTalk 5 Professional Server)
Accessible Windows client
- Stream HTTP and HTTPS URLs instead of only files (Windows 10)
- Online Users dialog now updates continuesly
- Online Users dialog allows banning logged out users
- OPUS audio codec v1.3
- Romanian language
- Indonesian language
- Store audio in MP3 format
- Sound event for broadcast message
- BearWare.dk web-login for TeamTalk 5 Official servers
- Connect to encrypted TeamTalk servers (TeamTalk 5 Professional Server)
iOS client
- OPUS audio codec v1.3
- Sound event for broadcast message
- BearWare.dk web-login for TeamTalk 5 Official servers
- Connect to encrypted TeamTalk servers (TeamTalk 5 Professional Server)
Android client
- Minimum Android version is now 5.0
- OPUS audio codec v1.3
- Sound event for broadcast message
- Option to announce content of private and channel messages
- Proximity sensor can be used to toggle voice transmission
- BearWare.dk web-login for TeamTalk 5 Official servers
- Connect to encrypted TeamTalk servers (TeamTalk 5 Professional Server)
Server