@@ -1,0 +1,287 @@
+<?xml version="1.0" encoding="utf-8"?>
+<resources>
+
+    <string name="app_name">TeamTalk 5</string>
+    <string name="title_activity_server_list">Servidores TeamTalk 5</string>
+    <string name="action_settings">Configurações</string>
+    <string name="action_exit">Sair</string>
+    <string name="title_activity_server_entry">Propriedades do servidor</string>
+    <string name="title_activity_main">TeamTalk 5 para Android</string>
+    <string name="title_section_channels">Canais</string>
+    <string name="title_section_chat">Chat</string>
+    <string name="title_section_media">Arquivos de mídia</string>
+    <string name="title_section_files">Arquivos</string>
+    <string name="title_activity_channel_prop">Propriedades do canal</string>
+    <string name="title_activity_user_prop">Propriedades do canal</string>
+    <string name="title_activity_text_message">Mensagem de texto</string>
+    <string name="title_activity_preferences">Preferências</string>
+    <string name="action_createchannel">Criar canal</string>
+    <string name="action_updatechannel">Atualizar canal</string>
+    <string name="text_con_failed">Erro ao conectar ao servidor. Tentando novamente...</string>
+    <string name="text_con_lost">Conexão com o servidor caiu.</string>
+    <string name="text_con_success">Conectado</string>
+    <string name="text_con_cmderr">Erro ao executar o comando</string>
+    <string name="text_cmderr_login">Erro ao executar o comando para logar</string>
+    <string name="text_cmd_loggedin">Conectado ao servidor</string>
+    <string name="text_cmd_joinchan">Entrou no canal: </string>
+    <string name="text_cmd_leftchan">Saiu do canal:</string>
+    <string name="text_cmd_joinroot">Entrou no canal inicial</string>
+    <string name="text_cmd_leftroot">Saiu do canal inicial</string>
+    <string name="text_cmd_userjoinchan">Entrou no canal</string>
+    <string name="text_cmd_userleftchan">Saiu do canal</string>
+    <string name="text_cmd_servername">Nome do servidor: </string>
+    <string name="text_cmd_servermotd">Mensagem do servidor: </string>
+    <string name="pref_cat_subscriptions">Subscrições</string>
+    <string name="pref_cat_tts">Configurar as mensagens anunciadas pelo leitor de telas</string>
+    <string name="pref_cat_soundtest">Testar som</string>
+    <string name="pref_header_general">Geral</string>
+    <string name="pref_title_nickname">Nome de usuário</string>
+    <string name="pref_default_nickname">Sem nome</string>
+    <string name="pref_title_keep_screen_on">Manter a tela ligada ao conectar</string>
+    <string name="pref_title_vibrate">Vibrar ao pressionar o botão pressionar para falar</string>
+    <string name="pref_show_log_messages">Mostrar mensagens de log no histórico de chat</string>
+    <string name="pref_title_audio_icons">Eventos de som</string>
+    <string name="pref_title_rx_tx_audio_icon">Alternar transmissão de voz</string>
+    <string name="pref_summary_rx_tx_audio_icon">Reproduzir som quando o botão de transmissão for ativado</string>
+    <string name="pref_title_vox_triggered_icon">Transmissão de voz ativada</string>
+    <string name="pref_summary_vox_triggered_icon">Reproduzir som quando a detexão de voz for ativada</string>
+    <string name="pref_title_private_message_audio_icon">Mensagem privada</string>
+    <string name="pref_summary_private_message_audio_icon">Reproduzir som ao receber mensagens privadas</string>
+    <string name="pref_title_channel_message_audio_icon">Mensagem no canal</string>
+    <string name="pref_summary_channel_message_audio_icon">Reproduzir som ao receber mensagens no canal</string>
+    <string name="pref_title_broadcast_message_audio_icon">Mensagem para todos</string>
+    <string name="pref_summary_broadcast_message_audio_icon">Reproduzir som ao receber mensagens para todos</string>
+    <string name="pref_title_server_lost_audio_icon">Conexão caiu</string>
+    <string name="pref_summary_server_lost_audio_icon">Reproduzir som quando a conexão cair</string>
+    <string name="pref_title_files_update_audio_icon">Atualizações na lista de arquivos</string>
+    <string name="pref_summary_files_update_audio_icon">Reproduzir som quando arquivos forem adicionados ou / removidos</string>
+    <string name="pref_title_transmitready_icon">Alternar o modo exclusivo</string>
+    <string name="pref_summary_transmitready_icon">Reproduzir som quando a transmissão estiver funcionando sem interrupções</string>
+    <string name="pref_header_connection">Conexão</string>
+    <string name="pref_title_sub_txtmsg">Mensagens de texto</string>
+    <string name="pref_summary_sub_txtmsg">Subscrever nas mensagens de texto dos usuários</string>
+    <string name="pref_title_sub_chanmsg">Mensagens do canal</string>
+    <string name="pref_summary_sub_chanmsg">Subscrever em mensagens de texto do canal</string>
+    <string name="pref_title_sub_bcastmsg">Mensagens globais</string>
+    <string name="pref_summary_sub_bcastmsg">Subscrever em mensagens globais</string>
+    <string name="pref_title_sub_voice">Voz</string>
+    <string name="pref_summary_sub_voice">Subscrever em mensagens de voz</string>
+    <string name="pref_title_sub_video">Captura de video</string>
+    <string name="pref_summary_sub_video">Subscrever em mensagens de vídeo</string>
+    <string name="pref_title_sub_desktop">Área de trabalho</string>
+    <string name="pref_summary_sub_desktop">Subscrever em capturas de tela</string>
+    <string name="pref_title_sub_mediafile">Arquivos multimídia</string>
+    <string name="pref_summary_sub_mediafile">Subscrever em transmissões de arquivos multimídia</string>
+    <string name="pref_header_tts">Texto para voz</string>
+    <string name="pref_title_server_login">Um usuário entrou no servidor</string>
+    <string name="pref_summary_server_login">Falar o nome dos usuários que conectarem no servidor</string>
+    <string name="pref_title_server_logout">Um usuário saiu do servidor</string>
+    <string name="pref_summary_server_logout">Falar o nome dos usuários que saírem do servidor</string>
+    <string name="pref_title_channel_join">Um usuário entrou no canal</string>
+    <string name="pref_summary_channel_join">Falar o nome dos usuários que entrarem no canal</string>
+    <string name="pref_title_channel_leave">Um usuário saiu do canal</string>
+    <string name="pref_summary_channel_leave">Falar o nome dos usuários que saírem do canal</string>
+    <string name="pref_title_private_message">Mensagens privadas</string>
+    <string name="pref_title_broadcast_message">Mensagens globais</string>
+    <string name="pref_summary_message">Falar o nome do emissor</string>
+    <string name="pref_title_mute_speakers">Silenciar alto-falantes quando pressionar o botão transmitir</string>
+    <string name="pref_summary_mute_speakers">Ative isso para evitar o eco produzido pelos alto-falantes</string>
+    <string name="pref_title_show_usernames">Mostrar nomes dos usuários</string>
+    <string name="pref_summary_show_usernames">Mostrar nome de usuário no lugar do apelido</string>
+    <string name="pref_title_mediafile_volume">Volume dos arquivos de mídia</string>
+    <string name="pref_summary_mediafile_volume">Volume dos arquivos de mídia (não o da voz)</string>
+    <string name="pref_title_speakerphone_checkbox">Ativar alto-falantes do celular</string>
+    <string name="pref_summary_speakerphone_checkbox">Trocar de fones para alto-falantes do celular</string>
+    <string name="pref_title_voice_processing_checkbox">Ativar áudio processado</string>
+    <string name="pref_summary_voice_processing_checkbox">Usar cancelamento de ruídos e ganho automático do microfone</string>
+    <string name="pref_title_public_servers">Mostrar servidores públicos</string>
+    <string name="pref_summary_public_servers">Incluir servidores públicos na lista de servidores</string>
+    <string name="text_tts_loggedin">entrou</string>
+    <string name="text_tts_loggedout">Saiu</string>
+    <string name="text_tts_joined_chan">entrou no canal</string>
+    <string name="text_tts_left_chan">Saiu do canal</string>
+    <string name="text_tts_private_message">Mensagem privada de %1$s: %2$s</string>
+    <string name="text_tts_broadcast_message">Mensagem global de %1$s: %2$s</string>
+    <string name="pref_header_soundsystem">Sistema de som</string>
+    <string name="title_activity_audio_codec">Codec de audio</string>
+    <string name="title_activity_filepicker">Escolha de arquivo</string>
+    <string name="title_section_opus">OPUS</string>
+    <string name="title_section_speex">Speex</string>
+    <string name="title_section_speexvbr">Speex VBR</string>
+    <string name="title_section_noaudio">Sem áudio</string>
+    <string name="opus_application">Aplicação OPUS</string>
+    
+    <string name="button_tx">Transmitir</string>
+    <string name="button_remove">Apagar</string>
+    <string name="button_edit">Editar</string>
+    <string name="action_ban">Banir</string>
+    <string name="action_edit">Editar canal</string>
+    <string name="action_join">Entrar</string>
+    <string name="action_kick">Expulsar</string>
+    <string name="action_move">Mover pra cá</string>
+    <string name="action_select">Selecionar para mover</string>
+    <string name="action_upload">Enviar arquivo</string>
+    <string name="button_msg">Mensagem</string>
+    <string name="button_send">Enviar</string>
+
+    <string name="channel_prop_title_name">Nome</string>
+    <string name="channel_prop_title_topic">Tema</string>
+    <string name="channel_prop_title_password">Senha</string>
+    <string name="channel_prop_title_op_password">Senha de moderador</string>
+    <string name="channel_prop_title_maxusers">Número máximo de usuários</string>
+    <string name="channel_prop_title_diskquota">Cota de disco (KBytes)</string>
+    
+    <string name="channel_prop_title_permanent">Canal permanente</string>
+    <string name="channel_prop_title_nointerrupt">Sem interrupções</string>
+    <string name="channel_prop_title_classroom">Canal de palestra</string>
+    <string name="channel_prop_title_oprecvonly">Só o operador pode receber</string>
+    <string name="channel_prop_title_novoiceact">Sem ativação por voz</string>
+    <string name="channel_prop_title_noaudiorecord">Sem gravações de áudio</string>
+    
+
+    <string name="user_prop_title_username">Nome de usuário</string>
+    <string name="user_prop_title_clientname">Nome do cliente</string>
+    <string name="user_prop_title_voice_volume">Volume da voz</string>
+    <string name="user_prop_title_mute_voice">Silenciar voz</string>
+    <string name="user_prop_title_media_volume">Volume para arquivos multimídia</string>
+    <string name="user_prop_title_mute_media">Silenciar arquivos multimídia</string>
+
+    <string name="label_connection">Conexão: </string>
+    <string name="stat_online">Online</string>
+    <string name="stat_offline">Offline</string>
+    <string name="stat_connecting">Conectando</string>
+    <string name="label_voice">Voz:</string>
+    <string name="label_desktop">Tela:</string>
+    <string name="label_ping">Ping:</string>
+    <string name="label_rxtx">RX/TX:</string>
+    <string name="label_total">Total:</string>
+    <string name="label_mediafile">Arquivo multimídia:</string>
+    <string name="default_">Padrão</string>
+
+    <string name="server_list_empty">A lista de servidores está vazia</string>
+    <string name="no_nickname">Não está definido nenhum nickname</string>
+    <string name="message_text">Texto da mensagem</string>
+    <string name="time_date">Data e hora</string>
+    <string name="name">Nome</string>
+
+    <string name="err_init_sound_input">Falha ao iniciar o dispositivo de captura de áudio.</string>
+    <string name="err_init_sound_output">Falha ao iniciar o dispositivo de saída de áudio.</string>
+    <string name="err_retrieve_public_server_list">Erro ao obter a lista de servidores públicos</string>
+    <string name="err_send_text_message">Erro ao enviar mensagem</string>
+    <string name="err_connection">Erro na conexão</string>
+
+    <string name="action_new_channel">Novo canal</string>
+    <string name="action_save">Salvar</string>
+    <string name="action_connect">Conectar</string>
+    <string name="action_new_server">Novo servidor</string>
+    <string name="action_refresh">Atualizar</string>
+    <string name="action_import_serverlist">Importar através de um arquivo</string>
+
+    <string name="pref_title_server_props">Propriedades do servidor</string>
+    <string name="pref_title_server_info">Informações do servidor</string>
+    <string name="pref_title_server_name">Nome do servidor</string>
+    <string name="pref_title_server_address">Domínio ou IP do servidor</string>
+    <string name="pref_title_tcp_port">Porta TCP</string>
+    <string name="pref_title_udp_port">Porta UDP</string>
+    <string name="pref_title_encription">Encriptado</string>
+    <string name="pref_title_authentication">Autenticação</string>
+    <string name="pref_title_username">Nome de usuário</string>
+    <string name="pref_title_password">Senha do usuário</string>
+    <string name="pref_title_join_channel">Entrar no canal</string>
+    <string name="pref_title_channel">Canal</string>
+    <string name="pref_title_channel_password">Senha do canal</string>
+    <string name="pref_title_last_channel">Último canal que você entrou</string>
+
+    <string name="pref_summary_server_name">Esse servidor aparecerá na lista com o nome especificado</string>
+    <string name="pref_summary_server_address">O endereço do servidor</string>
+
+    <string name="channel_password_prompt">Escreva a senha do canal</string>
+    <string name="button_download">Baixar</string>
+    <string name="download_succeeded">Download do arquivo %1$sconcluído. Salvo em %2$s</string>
+    <string name="download_failed">Falha ao baixar o arquivo %1$s</string>
+    <string name="upload_succeeded">Arquivo %1$s enviado com sucesso.</string>
+    <string name="upload_failed">Falha ao enviar o arquivo %1$s</string>
+    <string name="alert_file_override">O arquivo %1$s já existe. Deseja substituí-lo?</string>
+    <string name="err_file_delete">Não foi possível apagar o arquivo %1$s</string>
+    <string name="err_channel_remove">Não foi possível apagar o canal %1$s</string>
+    <string name="err_download_path">A pasta %1$s não está disponível</string>
+    <string name="download_progress">%1$d%% baixado</string>
+    <string name="upload_progress_title">Enviando %1$s</string>
+    <string name="upload_progress">%1$d%%, clique para cancelar</string>
+    <string name="upload_started">Upload de arquivo iniciado</string>
+    <string name="transfer_stopped">Transferência pausada</string>
+    <string name="complete">Completado</string>
+    <string name="remote_file_exists">O arquivo %1$s já existe no canal</string>
+    <string name="remote_file_remove_confirmation">Deseja apagar o arquivo %1$s do servidor?</string>
+    <string name="server_remove_confirmation">Deseja apagar %1$s da lista de servidores?</string>
+    <string name="channel_remove_confirmation">Deseja apagar o canal %1$s?</string>
+    <string name="version_update">Nova versão disponível: %1$s</string>
+    <string name="decvolume">Abaixar volume</string>
+	<string name="incvolume">Aumentar volume</string>
+	<string name="speaker_mute">Silenciar alto-falantes</string>
+	<string name="speaker_unmute">Ativar som</string>
+	<string name="mic_mute">Silenciar microfone</string>
+	<string name="mic_unmute">Ativar som do microfone</string>
+	<string name="decgain">Diminuir ganho do microfone</string>
+	<string name="incgain">Aumentar ganho do microfone</string>
+	
+    <string name="speaker_volume_description">O volume do alto-falantes é %1$s</string>
+    <string name="mic_gain_description">O ganho do microfone é %1$s</string>
+
+    <string name="voice_activation_on">Ligar ativação por voz</string>
+    <string name="voice_activation_off">Desligar ativação por voz</string>
+    <string name="decvoxlevel">Diminuir o ganho da ativação por voz</string>
+    <string name="incvoxlevel">Aumentar o nível de ativação por voz</string>
+    <string name="vox_level_description">O nível de ativação por voz é %1$s</string>
+
+    <string name="text_samplerate">Velocidade de mostra</string>
+    <string name="text_ignore_silence">Ignorar silêncios (pressionar-para-falar)</string>
+    <string name="text_audchan">Canais de áudio</string>
+    <string name="text_bitrate">Bitrate</string>
+    <string name="text_maxbitrate">Bitrate máxima</string>
+    <string name="text_txinterval">Intervalo de transmissão</string>
+    <string name="text_quality">Qualidade</string>
+    <string name="text_publicserver">Servidor público</string>
+    <string name="text_localserver">Servidor local</string>
+    <string name="text_passwdprot">Protegido por senha</string>
+    <string name="text_translator">Traduzido por Dalison J. T</string>
+    <string name="desktop_image">Captura de tela</string>
+    <string name="channel_change_alert">Todas as transferências serão canceladas ao trocar de canal</string>
+    <string name="disconnect_alert">Todas as transferências serão canceladas ao desconectar do servidor</string>
+
+    <string name="err_invalid_username">Nome de usuário errado</string>
+    <string name="err_incorrect_server_password">A senha do servidor está errada</string>
+    <string name="err_incorrect_channel_password">A senha do canal está errada</string>
+    <string name="err_invalid_account">Conta inválida</string>
+    <string name="err_max_server_users_exceeded">Limite de usuários no servidor excedido</string>
+    <string name="err_max_channel_users_exceeded">Limite máximo de usuários no canal excedido</string>
+    <string name="err_server_banned">Você está banido</string>
+    <string name="err_not_authorized">Não autorizado</string>
+    <string name="err_max_diskusage_exceeded">Espaço máximo em disco excedido</string>
+    <string name="err_incorrect_op_password">A senha de operador está errada</string>
+    <string name="err_max_logins_per_ipaddress_exceeded">Muitas conexões de um mesmo IP</string>
+    <string name="err_max_channels_exceeded">Muitos canais</string>
+    <string name="err_channel_already_exists">O canal já existe</string>
+    <string name="err_user_not_found">Usuário não encontrado</string>
+    <string name="err_openfile_failed">O servidor não conseguiu abrir o arquivo</string>
+    <string name="err_filesharing_disabled">Não está permitido a transferência de arquivos</string>
+    <string name="err_channel_has_users">O canal possui usuários</string>
+
+    <string name="private_message_notification">Nova mensagem de %1$s</string>
+    <string name="private_message_notification_hint">Clique para ler e responder</string>
+    <string name="user_state_now_speaking">%1$s microfone ativado</string>
+    <string name="text_waitstream">Esperando pela transmissão de vídeo</string>
+    <string name="text_desktop_session">Sessão de área de trabalho</string>
+    <string name="text_webcam_session">ativar webcam</string>
+    <string name="text_mediafile_session">Guia de arquivos multimídia</string>
+
+    <string name="permission_audioinput">Não será possível a gravação e reprodução de áudio</string>
+    <string name="permission_audiomodify">Não será possível a gravação e reprodução de áudio</string>
+    <string name="permission_filerx">Não poderá ser usado o Download de arquivos</string>
+    <string name="permission_filetx">O envio e importação de arquivos não poderá ser usado</string>
+    <string name="permission_internet">O cliente não poderá conectar em servidores</string>
+    <string name="permission_vibrate">A opção vibrar ao pressionar o botão transmitir não poderá ser ativada</string>
+    <string name="permission_wake_lock">A conexão com o servidor talvez caia quando a tela for bloqueada</string>
+    <string name="permission_read_phone_state">Não será possível a detexão de chamadas</string>
+
+</resources>
